[package]
name = "raydium-sdk"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "raydium sdk"
keywords = ["trade", "crypto", "finance", "solana", "raydium"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/raydium-sdk"

[dependencies]
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
bytemuck = "1.24.0"