[package]
name = "raydium-sdk"
version = "0.1.5"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "raydium sdk"
keywords = ["trade", "crypto", "finance", "solana", "raydium"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/raydium-sdk"

[dependencies]
hex = "0.4"
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
bytemuck = "1.24.0"
solana-tool = "0.1.1"
solana-network-sdk = { version = "0.2.0" }
solana-account-decoder = "3.1.4"
spl-token = "9.0.0"
spl-token-2022 = "10.0.0"
